Resolve tqdm notebook deprecation warnings

--- a/examples/04_Variational_and_Approximate_GPs/GP_Regression_with_Uncertain_Inputs.ipynb
+++ b/examples/04_Variational_and_Approximate_GPs/GP_Regression_with_Uncertain_Inputs.ipynb
@@ -216,7 +216,7 @@
     "# Our loss object. We're using the VariationalELBO\n",
     "mll = gpytorch.mlls.VariationalELBO(likelihood, model, num_data=train_y.size(0))\n",
     "\n",
-    "iterator = tqdm.tqdm_notebook(range(training_iter))\n",
+    "iterator = tqdm.notebook.tqdm(range(training_iter))\n",
     "for i in iterator:\n",
     "    # First thing: draw a sample set of features from our distribution\n",
     "    train_x_sample = torch.distributions.Normal(train_x_mean, train_x_stdv).rsample()\n",
