--- a/examples/04_Variational_and_Approximate_GPs/SVGP_Regression_CUDA.ipynb
+++ b/examples/04_Variational_and_Approximate_GPs/SVGP_Regression_CUDA.ipynb
@@ -281,10 +281,10 @@
     "mll = gpytorch.mlls.VariationalELBO(likelihood, model, num_data=train_y.size(0))\n",
     "\n",
     "\n",
-    "epochs_iter = tqdm.tqdm_notebook(range(num_epochs), desc=\"Epoch\")\n",
+    "epochs_iter = tqdm.notebook.tqdm(range(num_epochs), desc=\"Epoch\")\n",
     "for i in epochs_iter:\n",
     "    # Within each iteration, we will go over each minibatch of data\n",
-    "    minibatch_iter = tqdm.tqdm_notebook(train_loader, desc=\"Minibatch\", leave=False)\n",
+    "    minibatch_iter = tqdm.notebook.tqdm(train_loader, desc=\"Minibatch\", leave=False)\n",
     "    for x_batch, y_batch in minibatch_iter:\n",
     "        optimizer.zero_grad()\n",
     "        output = model(x_batch)\n",
