--- a/examples/05_Deep_Gaussian_Processes/Deep_Gaussian_Processes.ipynb
+++ b/examples/05_Deep_Gaussian_Processes/Deep_Gaussian_Processes.ipynb
@@ -468,10 +468,10 @@
     "], lr=0.01)\n",
     "mll = DeepApproximateMLL(VariationalELBO(model.likelihood, model, train_x.shape[-2]))\n",
     "\n",
-    "epochs_iter = tqdm.tqdm_notebook(range(num_epochs), desc=\"Epoch\")\n",
+    "epochs_iter = tqdm.notebook.tqdm(range(num_epochs), desc=\"Epoch\")\n",
     "for i in epochs_iter:\n",
     "    # Within each iteration, we will go over each minibatch of data\n",
-    "    minibatch_iter = tqdm.tqdm_notebook(train_loader, desc=\"Minibatch\", leave=False)\n",
+    "    minibatch_iter = tqdm.notebook.tqdm(train_loader, desc=\"Minibatch\", leave=False)\n",
     "    for x_batch, y_batch in minibatch_iter:\n",
     "        with gpytorch.settings.num_likelihood_samples(num_samples):\n",
     "            optimizer.zero_grad()\n",
