--- a/examples/06_PyTorch_NN_Integration_DKL/Deep_Kernel_Learning_DenseNet_CIFAR_Tutorial.ipynb
+++ b/examples/06_PyTorch_NN_Integration_DKL/Deep_Kernel_Learning_DenseNet_CIFAR_Tutorial.ipynb
@@ -255,7 +255,7 @@
     "    model.train()\n",
     "    likelihood.train()\n",
     "\n",
-    "    minibatch_iter = tqdm.tqdm_notebook(train_loader, desc=f\"(Epoch {epoch}) Minibatch\")\n",
+    "    minibatch_iter = tqdm.notebook.tqdm(train_loader, desc=f\"(Epoch {epoch}) Minibatch\")\n",
     "    with gpytorch.settings.num_likelihood_samples(8):\n",
     "        for data, target in minibatch_iter:\n",
     "            if torch.cuda.is_available():\n",
