--- a/examples/06_PyTorch_NN_Integration_DKL/KISSGP_Deep_Kernel_Regression_CUDA.ipynb
+++ b/examples/06_PyTorch_NN_Integration_DKL/KISSGP_Deep_Kernel_Regression_CUDA.ipynb
@@ -227,7 +227,7 @@
     "mll = gpytorch.mlls.ExactMarginalLogLikelihood(likelihood, model)\n",
     "\n",
     "def train():\n",
-    "    iterator = tqdm.tqdm_notebook(range(training_iterations))\n",
+    "    iterator = tqdm.notebook.tqdm(range(training_iterations))\n",
     "    for i in iterator:\n",
     "        # Zero backprop gradients\n",
     "        optimizer.zero_grad()\n",
