--- a/examples/07_Pyro_Integration/Cox_Process_Example.ipynb
+++ b/examples/07_Pyro_Integration/Cox_Process_Example.ipynb
@@ -379,7 +379,7 @@
     "    infer = pyro.infer.SVI(model.model, model.guide, optimizer, loss=loss)\n",
     "\n",
     "    model.train()\n",
-    "    loader = tqdm.tqdm_notebook(range(num_iter))\n",
+    "    loader = tqdm.notebook.tqdm(range(num_iter))\n",
     "    for i in loader:\n",
     "        loss = infer.step(arrival_times, quadrature_times)\n",
     "        loader.set_postfix(loss=loss)\n",
