--- a/examples/04_Variational_and_Approximate_GPs/SVGP_Multitask_GP_Regression.ipynb
+++ b/examples/04_Variational_and_Approximate_GPs/SVGP_Multitask_GP_Regression.ipynb
@@ -508,10 +508,10 @@
     "\n",
     "# We use more CG iterations here because the preconditioner introduced in the NeurIPS paper seems to be less\n",
     "# effective for VI.\n",
-    "epochs_iter = tqdm.tqdm_notebook(range(num_epochs), desc=\"Epoch\")\n",
+    "epochs_iter = tqdm.notebook.tqdm(range(num_epochs), desc=\"Epoch\")\n",
     "for i in epochs_iter:\n",
     "    # Within each iteration, we will go over each minibatch of data\n",
-    "    minibatch_iter = tqdm.tqdm_notebook(train_loader, desc=\"Minibatch\", leave=False)\n",
+    "    minibatch_iter = tqdm.notebook.tqdm(train_loader, desc=\"Minibatch\", leave=False)\n",
     "    for x_batch, y_batch in minibatch_iter:\n",
     "        optimizer.zero_grad()\n",
     "        output = model(x_batch)\n",
