--- a/examples/07_Pyro_Integration/Pyro_GPyTorch_Low_Level.ipynb
+++ b/examples/07_Pyro_Integration/Pyro_GPyTorch_Low_Level.ipynb
@@ -268,7 +268,7 @@
     "    svi = pyro.infer.SVI(model.model, model.guide, optimizer, elbo)\n",
     "\n",
     "    model.train()\n",
-    "    iterator = tqdm.tqdm_notebook(range(num_iter))\n",
+    "    iterator = tqdm.notebook.tqdm(range(num_iter))\n",
     "    for i in iterator:\n",
     "        model.zero_grad()\n",
     "        loss = svi.step(train_x, train_y)\n",
